--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><span>Web</span>Studio</a>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <nav>
             <ul>
-                <li><a href="index.html">Studio</a></li>
+                <li><a href="./index.html">Studio</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
     </header>
     <main>
         <section>
-            <h1>Effective Solution for Your Business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
         <section>
@@ -47,13 +49,13 @@
             </ul>
         </section>
         <section>
-            <h2>What Are We Doing</h2>
+            <h2>What are we doing</h2>
             <ul>
-                <li><img src="images/rectangle.jpg" alt="computer" width="360" 
+                <li><img src="./images/rectangle.jpg" alt="computer" width="360" 
                     height="300"></li>
-                <li><img src="images/app.jpg" alt="application" width="360" 
+                <li><img src="./images/app.jpg" alt="application" width="360" 
                     height="300"></li>
-                <li><img src="images/mobile.jpg" alt="phone" width="360" 
+                <li><img src="./images/mobile.jpg" alt="phone" width="360" 
                     height="300"></li>
             </ul>
         </section>
@@ -61,22 +63,22 @@
             <h2>Our Team</h2>
           <ul>
             <li>
-                <img src="images/img-3.jpg" alt="Mark" width="264" height="260">
+                <img src="./images/img-3.jpg" alt="Mark" width="264" height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="images/img-2.jpg" alt="Tom" width="264" height="260">
+                <img src="./images/img-2.jpg" alt="Tom" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="images/img-1.jpg" alt="Camila" width="264" height="260">
+                <img src="./images/img-1.jpg" alt="Camila" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="images/img.jpg" alt="Daniel" width="264" height="260">
+                <img src="./images/img.jpg" alt="Daniel" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
@@ -85,7 +87,7 @@
     </main>
     <footer>
         <section>
-            <a href="index.html"><span>Web</span>Studio</a>
+            <a href="./index.html"><span>Web</span>Studio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </section>
     </footer>
